<resources>
    <string name="app_name">Quizica</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="questiontype_option">Choose Question Type</string>
    <string name="questiontype_buttontext">Text</string>
    <string name="questiontype_buttonmcq">MCQ</string>
    <string name="mcqmaker_edittext">MCQ Question</string>
    <string name="mcqmaker_edittextone">First Option</string>
    <string name="mcqmaker_edittexttwo">Second Option</string>
    <string name="mcqmaker_edittextthree">Third Option</string>
    <string name="mcqmaker_edittextfour">Fourth Option</string>
    <string name="mcqmaker_edittextnswer">Answer</string>
    <string name="mcqmaker_buttondone">Done</string>
    <string name="mcqmaker_buttonaddmore">Add More</string>
    <string name="textmaker_edittext">Question</string>
    <string name="operation_picker">Choose Operation</string>
    <string name="profile_picker">Choose Profile</string>
    <string name="teacher_picker">Teacher</string>
    <string name="student_picker">Student</string>
    <string name="pref_file_key">MYPREF</string>
    <string name="pref_sign_key">SIGNED</string>
    <string name="profile_edittext_name">Enter Name</string>
    <string name="profile_edittext_id">Enter ID</string>
    <string name="course_edittext_name">Enter Course Name</string>
    <string name="course_edittext_id">Enter Course ID</string>
    <string name="search_title">Search Students</string>
    <string name="app_label"></string>
    <string name="search_hint">Search Students to Enroll</string>
    <string name="enroll_operation_dialog_title">Result Found</string>
    <string name="enroll_operation_dialog_msg">Do you want to enroll: </string>
    <string name="enroll_operation_dialog_positive">Yes</string>
    <string name="enroll_operation_dialog_negative">No</string>
    <string name="quizcreate_edittext_title">Enter Quiz Ttile</string>
    <string name="quizcreate_edittext_quiznumber">Enter Quiz Number</string>
    <string name="Sign_out">Sign Out</string>
    <string name="Or">Or</string>
    <string name="Result">Result</string>
    <string name="Tag_line">Keep Doing Hard Work</string>
    <string name="out_of">/</string>
    <string name="next">Next</string>
    <string name="total_marks">Enter Total Marks</string>
    <string name="joined">Joined</string>
    <string name="quiz_number">Quiz Number:</string>
    <string name="quiz_total_marks">Total Marks:</string>
    <string name="start_quiz">Start Quiz</string>
    <string name="view_results">View Results</string>
    <string name="result_not_found">Result Not Declared</string>
</resources>
