<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical">

    <EditText
        android:id="@+id/view_edittext_question"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="20dp"
        android:ems="10"
        android:inputType="textPersonName"
        android:paddingLeft="10dp"
        android:text="@string/mcqmaker_edittext" />

    <EditText
        android:id="@+id/view_edittext_optionOne"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="20dp"
        android:ems="10"
        android:inputType="textPersonName"
        android:paddingLeft="10dp"
        android:text="@string/mcqmaker_edittextone" />

    <EditText
        android:id="@+id/view_edittext_optionTwo"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="20dp"
        android:ems="10"
        android:inputType="textPersonName"
        android:paddingLeft="10dp"
        android:text="@string/mcqmaker_edittexttwo" />

    <EditText
        android:id="@+id/view_edittext_optionThree"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="20dp"
        android:ems="10"
        android:inputType="textPersonName"
        android:paddingLeft="10dp"
        android:text="@string/mcqmaker_edittextthree" />

    <EditText
        android:id="@+id/view_edittext_optionFour"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="20dp"
        android:ems="10"
        android:inputType="textPersonName"
        android:paddingLeft="10dp"
        android:text="@string/mcqmaker_edittextfour" />


    <EditText
        android:id="@+id/view_edittext_answer"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="20dp"
        android:ems="10"
        android:inputType="textPersonName"
        android:paddingLeft="10dp"
        android:text="@string/mcqmaker_edittextnswer" />
    <Button
        android:id="@+id/button_publish"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="Button"
        tools:text="Publish" />
</LinearLayout>