<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical">

    <TextView
        android:id="@+id/result_title"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="74sp"
        android:fontFamily="sans-serif-medium"
        android:text="@string/Result"
        android:textAlignment="center"
        android:textAppearance="@style/TextAppearance.AppCompat.Title"
        android:textColor="@color/authui_inputTextColorDark"
        android:textSize="30sp" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginBottom="14sp"
        android:layout_marginTop="14sp"
        android:orientation="horizontal">

        <TextView

            android:id="@+id/marks_obtained"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="end"
            android:layout_weight="1"
            android:textAlignment="viewEnd"
            android:textAppearance="@style/TextAppearance.AppCompat.Display4"
            tools:text="9" />

        <TextView
            android:id="@+id/textView6"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="@string/out_of"
            android:textAlignment="center"
            android:textAppearance="@style/TextAppearance.AppCompat.Display4"
            tools:text="/" />

        <TextView


            android:id="@+id/total_marks"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:textAppearance="@style/TextAppearance.AppCompat.Display4"
            tools:text="20" />

    </LinearLayout>

    <TextView
        android:id="@+id/message"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="14sp"
        android:text="@string/Tag_line"
        android:textAlignment="center"
        android:textAppearance="@style/TextAppearance.AppCompat.Body1" />

</LinearLayout>